<resources>
    <string name="app_name">MAT BASE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MAT BASE</string>
    <string name="nav_header_subtitle">matbase.tce@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_materials">Materials</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <!-- About Us Page Strings -->
    <string name="about_us_title">About MATBase</string>
    <string name="project_description_title">Project Description</string>
    <string name="project_description">MATBase is a comprehensive Material Management and Academic Support application designed specifically for TCE students. It provides easy access to study materials, department-wise resources, semester-wise organization, and handy tools like a Grade Calculator and Calendar. Our goal is to streamline the academic experience by centralizing all necessary resources in one professional platform.</string>
    
    <string name="team_details_title">Meet Our Team</string>
    
    <string name="member_1_name">ASWINKUMAR</string>
    <string name="member_1_role">Team Leader | Full Stack Developer | App Developer</string>
    <string name="member_1_desc">3rd Year B.Tech IT student at TCE. Leads the project development and handles both frontend and backend integrations.</string>

    <string name="member_2_name">PRAVEEN KUMAR TV</string>
    <string name="member_2_role">Full Stack Developer | App Developer</string>
    <string name="member_2_desc">3rd Year B.Tech IT student at TCE. Specializes in application architecture and database management.</string>

    <string name="member_3_name">YASHWANTH KUMAR D</string>
    <string name="member_3_role">Full Stack Developer | App Developer</string>
    <string name="member_3_desc">3rd Year B.Tech IT student at TCE. Focuses on UI/UX design and core application logic.</string>
</resources>